--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_library (liba SHARED liba.h liba.cpp)
 add_library (libb SHARED libb.h libb.cpp)
+target_link_libraries(libb liba)
 
 link_directories( ${CMAKE_CURRENT_BINARY_DIR} )
 
