--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,10 +9,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_library (liba SHARED liba.h liba.cpp)
-add_library (libb SHARED libb.h libb.cpp)
-target_link_libraries(libb liba)
 
 link_directories( ${CMAKE_CURRENT_BINARY_DIR} )
 
 add_executable(temptest main.cpp )
-target_link_libraries(temptest liba libb)
+target_link_libraries(temptest liba)
